--- a/metadata.yaml
+++ b/metadata.yaml
@@ -23,6 +23,7 @@ subjects:
 - !lcsh 'Catholic Church -- Ireland -- Clergy -- History'
 - !lcc 'BX'
 - !lcc 'DA'
+- GITenberg
 title: "A Chronological Table of the Catholic Primates of Ireland\r\nWith the Years\
   \ in Which They Succeeded to the Metropolitan Sees of Armagh, Dublin, Cashell and\
   \ Tuam"
